<resources>
    <string name="app_name">valuta</string>
    <string name="Currency_Converter">Конвертер Валют</string>
    <string name="ChangeVal">Измениить валютую</string>
    <string name="EnterNum">введите число</string>
    <string name="usd">USD</string>
    <string name="rub">RUB</string>
    <string name="NameItem1">Рубль</string>
    <string name="NameItem2">USD</string>
    <string name="currency_selection">выбор валют</string>
    <string name="cancel">отмена</string>
</resources>